# Portfolio

./: .gitignore
Contact_Book_V2/: README.md  pyproject.toml
Contact_Book_V2/app/: __init__.py  contact_book.py
Contact_Book_V2/core/: __init__.py  contact_bst.py  contact_models.py  contact_store.py  trie.py
Contact_Book_V2/tests/: test_contact_models.py  test_contact_store.py
Photo_Metadata_Tracker/: .gitignore  README.md  photos.json  pyproject.toml
Photo_Metadata_Tracker/app/: photo_tracker.py
Photo_Metadata_Tracker/core/: models.py  photo_store.py  tag_clustering.py  trie.py  union_find.py
Photo_Metadata_Tracker/tests/: test_models.py  test_photo_store.py  test_tag_clustering.py
contact_book/: .gitignore  README.md  pyproject.toml  run.sh
contact_book/app/: cli.py
contact_book/core/: contact_store.py  csv_handler.py  models.py
contact_book/data/: contacts.json  contacts_import.csv
contact_book/tests/: test_contact_store.py  test_models.py
