[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contact-book"
version = "0.1.0"
description = "Interactive CLI Contact Book"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Rafaji", email = "your.email@example.com"}
]
dependencies = [
    "pydantic[email]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[project.scripts]
contact-book = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "app"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py312']
